# telegram-rss-feed

./: .env.example  .gitignore  README.md  config.yml  pyproject.toml
.github/workflows/: rss_feed.yml
data/: state.json
src/rss_bot/: config.py  feed.py  main.py  state.py  telegram.py
tests/: test_config.py  test_feed.py  test_main.py  test_state.py  test_telegram.py
